plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.16.0'
    id 'org.jetbrains.changelog' version '2.0.0'
    id "io.freefair.lombok" version "6.6.1"
}

group 'dev.jeka.ide'
version '2023.10.26'

java {
    sourceCompatibility = 17
}

repositories {
    mavenCentral()
}

dependencies {
    implementation files('/Users/jerome/IdeaProjects/jeka/dev.jeka.core/jeka/output/distrib/dev.jeka.jeka-core.jar')
    //implementation group: 'dev.jeka', name: 'jeka-core', version: '0.10.20'
    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
    compileOnly 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version = '2023.2.3'
    updateSinceUntilBuild = false
    type = 'IC'
    plugins = ['com.intellij.java', 'org.jetbrains.kotlin', "org.jetbrains.idea.maven"]
}

publishPlugin {

    //token = System.getenv("ORG_GRADLE_PROJECT_intellijPublishToken")
    ///channels 'beta'
}
